# CMenteeStudy

./: 3000.c  3000.cpp  A_PrintExam.c  CMakeLists.txt  Exam10_For.c  Exam11_ForFor.c  Exam12_While.c  Exam13_DoWhile.c  Exam14_Arr.c  Exam15_ArrArr.c  Exam16_Pointer.c  Exam17_PoPointer.c  Exam18_DynamicMemory.c  Exam2_Value.c  Exam3_Getchar.c  Exam4_GetcharRewind.c  Exam5_Gets.c  Exam6_scanf.c  Exam7_If.c  Exam8_IfIf.c  Exam9_Switch.c  Exam_ArrArr.c  PrintExam.c  README.md  motion.c  p100.c  p103.c  p106.c  p139.c  p142.c  p143.c  p147.c  p162.c  p169.c  p99.c  p_num1.c
exam/: graph.c  graph1.c  graph2.c  list.c  listQueue.c  listqueue_q1.c  queue.c  queue_q1.c  stack1.c  stack_q1.c  tree.c
sort/: bubble.c  insert.c  quick.c  select.c
