cmake_minimum_required(VERSION 3.7)
project(MenteeStudy)

set(CMAKE_C_STANDARD 99)

#set(SOURCE_FILES Exam1_Print.c)
#set(SOURCE_FILES Exam2_Value.c)
#set(SOURCE_FILES exam/stack1.c)
#set(SOURCE_FILES exam/list.c)
#set(SOURCE_FILES exam/stack_q1.c)
#set(SOURCE_FILES exam/queue_q1.c)
#set(SOURCE_FILES exam/listQueue.c)
#set(SOURCE_FILES exam/listqueue_q1.c)
#set(SOURCE_FILES exam/graph1.c)
#set(SOURCE_FILES exam/graph2.c)
#set(SOURCE_FILES Exam3_Getchar.c)
#set(SOURCE_FILES Exam4_GetcharRewind.c)
#set(SOURCE_FILES Exam5_Gets.c)
set(SOURCE_FILES Exam6_scanf.c)
#set(SOURCE_FILES 3000.cpp)
#set(SOURCE_FILES Exam7_Arr.c)
add_executable(MenteeStudy ${SOURCE_FILES})