cmake_minimum_required(VERSION 3.7)
project(MenteeStudy)

set(CMAKE_C_STANDARD 99)

#set(SOURCE_FILES 3000.cpp)

#set(SOURCE_FILES exam/stack1.c)
#set(SOURCE_FILES exam/list.c)
#set(SOURCE_FILES exam/stack_q1.c)
#set(SOURCE_FILES exam/queue_q1.c)
#set(SOURCE_FILES exam/listQueue.c)
#set(SOURCE_FILES exam/listqueue_q1.c)
#set(SOURCE_FILES exam/graph1.c)
#set(SOURCE_FILES exam/graph2.c)

#set(SOURCE_FILES Exam1_Print.c)
#set(SOURCE_FILES Exam2_Value.c)
#set(SOURCE_FILES Exam3_Getchar.c)
#set(SOURCE_FILES Exam4_GetcharRewind.c)
#set(SOURCE_FILES Exam5_Gets.c)
#set(SOURCE_FILES Exam6_scanf.c)
#set(SOURCE_FILES Exam7_If.c)
#set(SOURCE_FILES Exam8_IfIf.c)
#set(SOURCE_FILES Exam9_Switch.c)
#set(SOURCE_FILES Exam10_For.c)
#set(SOURCE_FILES Exam11_ForFor.c)
#set(SOURCE_FILES Exam12_While.c)
#set(SOURCE_FILES Exam13_DoWhile.c)
#set(SOURCE_FILES Exam14_Arr.c)
#set(SOURCE_FILES Exam15_ArrArr.c)
#set(SOURCE_FILES Exam16_Pointer.c)
set(SOURCE_FILES Exam17_PoPointer.c)
add_executable(MenteeStudy ${SOURCE_FILES})